--- a/Expedition/Storyboards/Base.lproj/Main.storyboard
+++ b/Expedition/Storyboards/Base.lproj/Main.storyboard
@@ -610,7 +610,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="DZ3-i7-3vU">
-                        <barButtonItem key="rightBarButtonItem" image="xmark.circle" catalog="system" id="n1E-Rn-I5e">
+                        <barButtonItem key="rightBarButtonItem" image="xmark" catalog="system" id="n1E-Rn-I5e">
                             <connections>
                                 <action selector="close:" destination="9OM-wm-4ti" id="mi2-rw-Xma"/>
                             </connections>
@@ -1616,7 +1616,7 @@ We do not collect any data or personal information in Expedition. We simply do n
         <image name="square.on.square" catalog="system" width="128" height="113"/>
         <image name="swipeBlue" width="1024" height="1024"/>
         <image name="trash" catalog="system" width="121" height="128"/>
-        <image name="xmark.circle" catalog="system" width="128" height="121"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="Expedition Blue">
             <color red="0.064000003039836884" green="0.56400001049041748" blue="0.97000002861022949" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
