--- a/Expedition/Storyboards/Onboarding.storyboard
+++ b/Expedition/Storyboards/Onboarding.storyboard
@@ -57,7 +57,7 @@
             <objects>
                 <tableViewController id="FG7-ud-6Gh" customClass="Onb1ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="NoA-hO-hbh">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="747"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="Expedition White"/>
                         <color key="separatorColor" name="Expedition White"/>
@@ -72,25 +72,25 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="259"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wrenchBlue" translatesAutoresizingMaskIntoConstraints="NO" id="z27-Cz-Xlu">
-                                                    <rect key="frame" x="132" y="26" width="150" height="150"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="150" id="7EX-mg-Km5"/>
-                                                        <constraint firstAttribute="width" secondItem="z27-Cz-Xlu" secondAttribute="height" multiplier="1:1" id="h1G-1w-fxe"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="customization" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VzF-3m-hxH">
-                                                    <rect key="frame" x="101.5" y="191" width="211" height="43"/>
+                                                    <rect key="frame" x="101.5" y="180" width="211" height="43"/>
                                                     <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="31"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wrenchBlue" translatesAutoresizingMaskIntoConstraints="NO" id="KWU-5g-Mhc">
+                                                    <rect key="frame" x="132" y="15" width="150" height="150"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="KWU-5g-Mhc" secondAttribute="height" multiplier="1:1" id="QfT-8R-uTC"/>
+                                                        <constraint firstAttribute="width" constant="150" id="eCF-31-PU0"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="VzF-3m-hxH" firstAttribute="centerX" secondItem="eZW-Ys-XXc" secondAttribute="centerX" id="66W-0S-1bX"/>
-                                                <constraint firstItem="z27-Cz-Xlu" firstAttribute="top" secondItem="eZW-Ys-XXc" secondAttribute="topMargin" constant="15" id="Peb-YW-Xfu"/>
-                                                <constraint firstItem="VzF-3m-hxH" firstAttribute="top" secondItem="z27-Cz-Xlu" secondAttribute="bottom" constant="15" id="ca7-2b-7Hp"/>
-                                                <constraint firstItem="z27-Cz-Xlu" firstAttribute="centerX" secondItem="eZW-Ys-XXc" secondAttribute="centerX" id="wWF-Rb-7hA"/>
+                                                <constraint firstItem="KWU-5g-Mhc" firstAttribute="centerX" secondItem="eZW-Ys-XXc" secondAttribute="centerX" id="OF6-av-j9L"/>
+                                                <constraint firstItem="KWU-5g-Mhc" firstAttribute="top" secondItem="eZW-Ys-XXc" secondAttribute="top" constant="15" id="YMk-5J-PCu"/>
+                                                <constraint firstItem="VzF-3m-hxH" firstAttribute="top" secondItem="KWU-5g-Mhc" secondAttribute="bottom" constant="15" id="YQl-4E-pbd"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" name="Expedition White"/>
@@ -138,9 +138,6 @@
                     </tableView>
                     <connections>
                         <outlet property="fadeOnCloseSwitch" destination="Igv-H1-0Rv" id="nLe-Hs-FtW"/>
-                        <outlet property="image" destination="z27-Cz-Xlu" id="DRF-L7-zLB"/>
-                        <outlet property="imageHeight" destination="Peb-YW-Xfu" id="Xdi-GK-Vcc"/>
-                        <outlet property="imageWidth" destination="7EX-mg-Km5" id="69G-mX-zya"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0kV-DG-ONr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -216,7 +213,7 @@
             <objects>
                 <tableViewController id="igf-cF-bXx" customClass="Onb2ViewController" customModule="Expedition" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="p3H-6a-FE6">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="747"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="Expedition White"/>
                         <color key="separatorColor" name="Expedition White"/>
@@ -377,35 +374,31 @@
                                     <segue destination="WpT-AJ-97r" kind="embed" id="FcI-AZ-QVa"/>
                                 </connections>
                             </containerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIc-wu-hx8">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJ5-sS-O0r">
                                 <rect key="frame" x="82" y="747.5" width="250" height="109.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="250" id="2Xr-up-wEc"/>
-                                    <constraint firstAttribute="width" secondItem="XIc-wu-hx8" secondAttribute="height" multiplier="137:60" id="XS9-oe-2ZB"/>
+                                    <constraint firstAttribute="width" constant="250" id="PYv-TH-oHE"/>
+                                    <constraint firstAttribute="width" secondItem="CJ5-sS-O0r" secondAttribute="height" multiplier="137:60" id="giy-zh-GYO"/>
                                 </constraints>
                                 <state key="normal" image="continueBtn"/>
-                                <state key="disabled" image="continueBtn-P"/>
                                 <state key="highlighted" image="continueBtn-P"/>
                                 <connections>
-                                    <action selector="continuePressed:" destination="GVe-fO-E15" eventType="touchUpInside" id="cGh-95-ASb"/>
+                                    <action selector="continuePressed:" destination="GVe-fO-E15" eventType="touchUpInside" id="sPU-xm-GVy"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" name="Expedition White"/>
                         <constraints>
-                            <constraint firstItem="sDk-dw-uP0" firstAttribute="bottom" secondItem="XIc-wu-hx8" secondAttribute="bottom" constant="5" id="Mch-9c-xJu"/>
+                            <constraint firstItem="sDk-dw-uP0" firstAttribute="bottom" secondItem="CJ5-sS-O0r" secondAttribute="bottom" constant="5" id="Pbp-bu-V3D"/>
                             <constraint firstItem="xTp-dj-Hof" firstAttribute="top" secondItem="hyE-rf-k3w" secondAttribute="top" id="Z79-6X-mZW"/>
-                            <constraint firstItem="XIc-wu-hx8" firstAttribute="top" secondItem="xTp-dj-Hof" secondAttribute="bottom" id="eTG-qu-oXb"/>
+                            <constraint firstItem="CJ5-sS-O0r" firstAttribute="top" secondItem="xTp-dj-Hof" secondAttribute="bottom" id="Zot-Nx-vwc"/>
+                            <constraint firstItem="CJ5-sS-O0r" firstAttribute="centerX" secondItem="hyE-rf-k3w" secondAttribute="centerX" id="apH-gY-bAO"/>
                             <constraint firstItem="xTp-dj-Hof" firstAttribute="trailing" secondItem="sDk-dw-uP0" secondAttribute="trailing" id="jkV-8O-HUe"/>
                             <constraint firstItem="xTp-dj-Hof" firstAttribute="leading" secondItem="sDk-dw-uP0" secondAttribute="leading" id="k8H-b2-w2W"/>
-                            <constraint firstItem="XIc-wu-hx8" firstAttribute="centerX" secondItem="hyE-rf-k3w" secondAttribute="centerX" id="sNi-NC-REe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sDk-dw-uP0"/>
                     </view>
                     <navigationItem key="navigationItem" id="cHA-1E-075"/>
-                    <connections>
-                        <outlet property="continueBtn" destination="XIc-wu-hx8" id="oQv-OT-nx0"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HfW-zn-ahL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -416,7 +409,7 @@
             <objects>
                 <tableViewController id="WpT-AJ-97r" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="zTQ-Jv-nFQ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="747"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="747.5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="Expedition White"/>
                         <gestureRecognizers/>
